Update app description

--- a/src/CanvasManifest.json
+++ b/src/CanvasManifest.json
@@ -7,14 +7,14 @@
   },
   "Properties": {
     "AppCreationSource": "AppFromScratch",
-    "AppDescription": "",
+    "AppDescription": "App to upload profile image",
     "AppPreviewFlagsMap": {
       "aibuilderserviceenrollment": false,
       "allowmultiplescreensincanvaspages": false,
       "appinsightserrortracing": true,
       "appinstrumentationcorrelationtracing": true,
-      "autocreateenvironmentvariables": false,
-      "backfromhostaction": false,
+      "autocreateenvironmentvariables": true,
+      "backfromhostaction": true,
       "behaviorpropertyui": true,
       "blockmovingcontrol": true,
       "cdsdataformatting": false,
@@ -26,8 +26,8 @@
       "delaycontrolrendering": false,
       "delayloadscreens": true,
       "disablecdsfileandlargeimage": false,
-      "dynamicschema": false,
-      "enableappembeddingux": false,
+      "dynamicschema": true,
+      "enableappembeddingux": true,
       "enablecommandbar": false,
       "enablecomponentnamemaps": false,
       "enablecomponentscopeoldbehavior": false,
@@ -38,7 +38,7 @@
       "enableonstartnavigate": false,
       "enablepcfmoderndatasets": true,
       "enablepowerautomatepane": true,
-      "enablerowscopeonetonexpand": false,
+      "enablerowscopeonetonexpand": true,
       "enablerpawarecomponentdependency": true,
       "enablerulespanel": false,
       "enablesaveloadcleardataonweb": true,
@@ -53,11 +53,11 @@
       "formularepair": true,
       "generatedebugpublishedapp": false,
       "herocontrols": false,
-      "improvedmediacapture": false,
+      "improvedmediacapture": true,
       "improvedtabstopbehavior": true,
       "keeprecentscreensloaded": true,
       "longlivingcache": false,
-      "namedformulas": false,
+      "namedformulas": true,
       "nativecdsexperimental": true,
       "optimizedforteamsmeeting": false,
       "parallelcodegen": false,
@@ -67,14 +67,14 @@
       "reverttooldpowerautomate": false,
       "rtlinstudiopreview": false,
       "rtlsupport": false,
-      "untypedobject": false,
+      "untypedobject": true,
       "usedisplaynamemetadata": true,
       "useenforcesavedatalimits": true,
       "useexperimentalcdsconnector": true,
       "useexperimentalsqlconnector": true,
       "useguiddatatypes": true,
       "usenonblockingonstartrule": true,
-      "webbarcodescanner": false,
+      "webbarcodescanner": true,
       "zeroalltabindexes": false
     },
     "Author": "",
@@ -82,7 +82,7 @@
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "Phone",
     "DocumentLayoutHeight": 1136,
-    "DocumentLayoutLockOrientation": false,
+    "DocumentLayoutLockOrientation": true,
     "DocumentLayoutMaintainAspectRatio": true,
     "DocumentLayoutOrientation": "portrait",
     "DocumentLayoutScaleToFit": true,
